# alzheimers-mouse

./: COPYRIGHT  README.md  pyproject.toml
analyses/: Figures3_4.ipynb  README.md
data/parcellation/: CHASSSYMM3AtlasLegends020224.xlsx
docs/: _config.yml  _toc.yml  analysis-diet.ipynb  analysis-hn-Copy1.ipynb  analysis-hn.ipynb  analysis.ipynb  distance-figures.ipynb  embeddings.ipynb  supplementary.ipynb
exploratory/: Figure2.ipynb  README.md  embedding.ipynb
figures/: figure_1.afdesign  overview.afdesign
figures/figure_1/: Figure1.ipynb
figures/notebooks/: fig1.ipynb
pkg/pkg/plot/: __init__.py  brain.py
results/effect_sizes/: analysis-diet.csv  analysis-hn.csv
results/pvalues/: analysis-diet.csv  analysis-hn.csv
