[tool.poetry]
name = "badea-mouse"
version = "0.1.0"
description = ""
authors = ["eric <ericwb95@gmail.com>", "j1c <jaewonc78@gmail.com>"]
license = "MIT"
packages = [{ include = "pkg" }]
include = ["pkg/**/*"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
typing-extensions = "^4.3"
seaborn = "^0.13.0"
graspologic = "3.4.1"
jupyterlab = "^3.4.6"
pkg = {path = "pkg", develop = true}
statsmodels = "^0.14.0"
plotly = "^5.10.0"
jupyterlab-code-formatter = "^1.5.3"
black = "^22.8.0"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
CairoSVG = "^2.5.2"
svgutils = "^0.3.4"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
jupyter-book = "^0.13.1"
jupyterlab-code-formatter = "^1.5.3"
isort = "^5.10"
myst-nb = ">=0.13.1,<0.14.0"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
